--- a/javaif.html
+++ b/javaif.html
@@ -22,9 +22,18 @@
         } else{
             document.write("3<br>");
         }
-        
-        
         document.write("4<br>");
     </script>
+
+<h2> IF- true</h2>
+<script>
+    document.write("1<br>");
+    if(true){
+        document.write("2<br>");
+    } else{
+        document.write("3<br>");
+    }
+    document.write("4<br>");
+</script>
 </body>
 </html>
