--- a/java_function.html
+++ b/java_function.html
@@ -23,6 +23,17 @@
             </script>
         </ul>
     <h2>Parameter & Argument</h2>
+        <script>
+            function onePlusOne(){
+                document.write (1+1+'<br>');
+                }
+            onePlusOne();
+            function sum(left,right){
+                document.write(left+right+'<br>'); 
+            }
+            sum(2,3);
+        </script>
+
     <h2>Return    </h2>
 </body>
 </html>
