--- a/java_function.html
+++ b/java_function.html
@@ -22,6 +22,7 @@
             
             </script>
         </ul>
+
     <h2>Parameter & Argument</h2>
         <script>
             function onePlusOne(){
@@ -32,8 +33,21 @@
                 document.write(left+right+'<br>'); 
             }
             sum(2,3);
+
+            function sumColorRed(left,right){
+                document.write('<div style="color:red">'+left+right+'</div>'); 
+            }
+            sumColorRed(9+9);
         </script>
 
     <h2>Return    </h2>
+    <script>
+        function sum2(left,right){
+            return left+right;
+        }
+        document.write(sum2(2,3)+'<br>');
+        document.write('<div style ="color:red">' +sum2(2,3) +'</div>');
+        document.write('<div style ="font-size:3rem">'+sum2(2,3)+'</div>');
+    </script>
 </body>
 </html>
